# buf-python-code-gen-example

./: .gitignore  Makefile  README.md  buf.gen.yaml  pyproject.toml
app/acmecorp/filemanagement/v1/: service_pb2.pyi  service_pb2_grpc.py
buf_python_code_gen_example/: main.py
buf_python_code_gen_example/acmecorp/filemanagement/v1/: data_pb2.py  data_pb2.pyi  service_pb2.py
proto/acmecorp/filemanagement/v1/: data.proto  service.proto
